styled the buttons, fixed question-section bug when the content is overflowing

--- a/style.css
+++ b/style.css
@@ -55,9 +55,15 @@ nav {
 .progress-bar {
   background-color: var(--blue) !important;
 }
+#question-section {
+  height: 50vh;
+  overflow-y: auto;
+}
 .button-section {
-  height: 40vh;
   column-gap: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .score-section {
   display: none;
@@ -105,8 +111,11 @@ nav {
 }
 .option-container {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
   column-gap: 1rem;
+  padding: 1rem;
+  width: 100%;
+  background-color: rgb(235, 235, 235);
 }
 .unselectable {
   -webkit-user-select: none;
@@ -124,9 +133,4 @@ nav {
   width: 50%;
   text-align: right;
   font-weight: bold;
-}
-.button-section {
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
